Adds State performance about push/pop
- Also changed the way State class is created because we dont see the real
name methods in profiler.
- Adds Stats in Push/Pop StateSet

To check the impact of a Stack class
http://jsperf.com/object-vs-array-push-pop/4

--- a/benchmarks/index.html
+++ b/benchmarks/index.html
@@ -4,8 +4,8 @@
     <title>QUnit Benchmark Suite</title>
     <link rel='stylesheet' href='../tests/vendors/qunit/qunit.css' type='text/css' media='screen'>
 
-    <script type='text/javascript' src='../tests/vendors/es5-shim.js'></script>
-    <script type='text/javascript' src='../tests/vendors/es6-shim.js'></script>
+    <!-- <script type='text/javascript' src='../tests/vendors/es5-shim.js'></script> -->
+    <!-- <script type='text/javascript' src='../tests/vendors/es6-shim.js'></script> -->
     <script type='text/javascript' src='../tests/vendors/qunit/qunit.js'></script>
 
     <script type='text/javascript'>
